// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AsyncButton /> should render children 1`] = `
<button>
  Click
</button>
`;

exports[`<AsyncButton /> should render children 2`] = `
<button>
  Loading
</button>
`;

exports[`<AsyncButton /> should render children 3`] = `
<button>
  Success
</button>
`;

exports[`<AsyncButton /> should render error when callback throws 1`] = `
<button>
  Error
</button>
`;
